--- a/battle-royale.html
+++ b/battle-royale.html
@@ -44,7 +44,7 @@
 
             <div class="specific-portfolio" itemscope itemtype="http://schema.org/Website">
                 <div class="potfolio-banner" style="background-image:url(images/portfolio/broyale/banner.jpg)">
-                    <h1><div itemprop="name">Battle Royale</div> <span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
+                    <h1><div itemprop="name">Battle Royale</div><span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
                     <a class="Arrow" href="javascript:void(0)" onClick="JavaScript:$('#footer').animatescroll({scrollSpeed:4800,easing:'easeInSine'})"></a>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content has-shape shape-4 has-slime-2">
@@ -90,7 +90,7 @@
                         </div><!-- reveal end -->
 
                         <div class="button-holder center-aligned">
-                            <a class="bttn has-icon web-icon" itemprop="url" href="http://www.edoramediarepository.com/samanira/broyale/" target="_blank">Open This Project in Web</a>
+                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.edoramediarepository.com/samanira/broyale/" target="_blank">Open This Project in Web</a>
                             <a class="bttn has-icon home-icon" href="index.html">Back to Home Page</a>
                         </div><!-- button-holder end -->
 
