--- a/primalmd.html
+++ b/primalmd.html
@@ -42,9 +42,9 @@
 <!-- ======== Main Content Start ======== -->
 
 
-            <div class="specific-portfolio">
+            <div class="specific-portfolio" itemscope itemtype="http://schema.org/Website">
                 <div class="potfolio-banner" style="background-image:url(images/portfolio/primalmd/banner.jpg)">
-                    <h1>Primal MD <span>by <strong>Saman Rashidi</strong></span></h1>
+                    <h1><div itemprop="name">Primal MD</div><span>by <strong itemprop="author">Saman Rashidi</strong></span></h1>
                     <a class="Arrow" href="javascript:void(0)" onClick="JavaScript:$('#footer').animatescroll({scrollSpeed:4800,easing:'easeInSine'})"></a>
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content has-shape shape-4 has-slime-2">
@@ -52,10 +52,10 @@
                         <div class="reveal">
                             <div class="content-box">
                                 <div class="content-image left-aligned">
-                                    <img src="images/portfolio/primalmd/desktop.png" alt="Primal MD Desktop Version Website" />
+                                    <img itemprop="image" src="images/portfolio/primalmd/desktop.png" alt="Primal MD Desktop Version Website" />
                                 </div><!-- content-image end -->
                                 <div class="content-text">
-                                    <h6>" Primal MD has the most complete evidence based Age Management model to date and is best suited to face our current healthcare challenge "</h6>
+                                    <h6 itemprop="description">" Primal MD has the most complete evidence based Age Management model to date and is best suited to face our current healthcare challenge "</h6>
                                 </div><!-- content-text end -->
                                 <div class="clearFix"></div><!-- clearFix end -->
                             </div><!-- content-box end -->
@@ -90,7 +90,7 @@
                         </div><!-- reveal end -->
 
                         <div class="button-holder center-aligned">
-                            <a class="bttn has-icon web-icon" href="http://www.edoramediarepository.com/samanira/primalmd/" target="_blank">Open This Project in Web</a>
+                            <a itemprop="url" class="bttn has-icon web-icon" href="http://www.edoramediarepository.com/samanira/primalmd/" target="_blank">Open This Project in Web</a>
                             <a class="bttn has-icon home-icon" href="index.html">Back to Home Page</a>
                         </div><!-- button-holder end -->
 
