--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 			}
 		</style>
 	</head>
-	<body>
-		<div id="wrapper" itemscope itemtype="http://www.schema.org/Person" itemprop="developer">
+	<body itemscope itemtype="http://www.schema.org/Person" itemprop="developer">
+		<div id="wrapper">
 
 <!-- ======== Header Start ======== -->
 
@@ -146,7 +146,7 @@
 								<h1>About Me</h1>
 							</div><!-- section-title end -->
 							<div class="section-content">
-								<p class="justified" itemprop="description">My name is <strong itemprop="name">Saman Rashidi</strong>, I’m from Tehran, Iran, and I specialize in <strong itemprop="expertise">Web Design and Front-end Web Development</strong>. I hold 4 CIW certification from MFTN (Mojtama Fani Tehran), and have gained more than 8500 points and 100 achievements in <a target="_blank" href="http://www.teamtreehouse.com/samanrashidi">TeamTreeHouse</a> Website. I started working with <a itemprop="company" target="_blank" href="http://www.edoramedia.com">Edoramedia</a> digital solution company since October 2014 as a front-end developer. Before entering a career in creating web pages, I received my bachelor’s degree in Biology and shortly became highly interested in the science known as Neuromarketing. Due to my passion and education, I pursued the Marketing Management certification and worked with Dr. Mohsen Oftadehal (Cognitive Scientist) to concentrate on advertising skills approached using biological methods. Today I am a Senior Front-end Developer in Edoramedia focus on designing creative and appealing websites, attractive and clean to the viewers’ eyes, and skillfully developed on the back-end.I am the owner of <a target="_blank" href="http://github.com/samanrashidii/samanira">SamanirA</a> framework with my partner <a target="_blank" href="http://www.samirasalimian.com">Samira Salimian</a> to make a better and simpler framework for front-end developers.</p>
+								<p class="justified" itemprop="description">My name is <strong itemprop="name">Saman Rashidi</strong>, I’m from Tehran, <strong itemprop="nationality">Iran</strong>, and I specialize in <strong>Web Design and Front-end Web Development</strong>. I hold 4 CIW certification from MFTN (Mojtama Fani Tehran), and have gained <strong itemprop="award">more than 8500 points and 100 achievements in <a target="_blank" href="http://www.teamtreehouse.com/samanrashidi">TeamTreeHouse</a> Website</strong>. I started working with <a itemprop="worksFor" target="_blank" href="http://www.edoramedia.com">Edoramedia</a> digital solution company since October 2014 as a front-end developer. Before entering a career in creating web pages, I received my bachelor’s degree in Biology and shortly became highly interested in the science known as Neuromarketing. Due to my passion and education, I pursued the Marketing Management certification and worked with Dr. Mohsen Oftadehal (Cognitive Scientist) to concentrate on advertising skills approached using biological methods. Today I am a <strong itemprop="jobTitle">Senior Front-end Developer</strong> in Edoramedia focus on designing creative and appealing websites, attractive and clean to the viewers’ eyes, and skillfully developed on the back-end.I am the owner of <a itemprop="owns" target="_blank" href="http://github.com/samanrashidii/samanira">SamanirA framework</a> with my partner <a target="_blank" href="http://www.samirasalimian.com">Samira Salimian</a> to make a better and simpler framework for front-end developers.</p>
 							</div><!-- section-content end -->
 							<div class="pagination">
 								<div class="pagination-content">
@@ -348,7 +348,7 @@
 										</div><!-- portfolio-layer-content end -->
 									</div><!-- portfolio-inner-layer end -->
 								</div><!-- portfolio-layer end -->
-								<img src="images/portfolio/benita-thumb.jpg" alt="Benita v1.0 & v2.0 Website by Saman Rashidi" />
+								<img src="images/portfolio/benita-thumb.jpg" alt="Benita v1.0 &amp; v2.0 Website by Saman Rashidi" />
 							</li>
 							<li>
 								<div class="portfolio-layer">
@@ -664,15 +664,15 @@
 								<h3 class="inner-title information-icon">Contact Information</h3>
 								<div class="contact-info">
 									<ul>
-										<li><strong class="mobile-icon">Mobile Number:</strong> <a itemprop="mobileNumber" href="tel:+989128996990">+989128996990</a></li>
+										<li><strong class="mobile-icon">Mobile Number:</strong> <a itemprop="contactPoint" itemprop="telephone" href="tel:+989128996990">+989128996990</a></li>
 										<li><strong class="navigation-icon">Address:</strong> <a target="_blank" href="https://www.google.com/maps/@32.4943981,54.451405,6z">Tehran, Iran.</a></li>
-										<li><strong class="email-icon">Email Address:</strong> <a itemprop="emailAddress" href="mailto:me@samanrashidi.com">Me@samanrashidi.com</a></li>
+										<li><strong class="email-icon">Email Address:</strong> <a href="mailto:me@samanrashidi.com"><span itemprop="email">Me@samanrashidi.com</span></a></li>
 										<li class="socials">
-											<a itemprop="telegramID" class="social-icon telegram" target="_blank" href="https://telegram.me/samanrashidii"></a>
-											<a itemprop="github" class="social-icon github" target="_blank" href="https://github.com/samanrashidii"></a>
-											<a itemprop="linkedin" class="social-icon linkedin" target="_blank" href="https://www.linkedin.com/in/samanrsh"></a>
-											<a itemprop="googlePlus" class="social-icon googleplus" target="_blank" href="https://plus.google.com/109638627387819515843"></a>
-											<a itemprop="facebook" class="social-icon facebook" target="_blank" href="https://www.facebook.com/Samanrashidii"></a>	
+											<a class="social-icon telegram" target="_blank" href="https://telegram.me/samanrashidii"></a>
+											<a class="social-icon github" target="_blank" href="https://github.com/samanrashidii"></a>
+											<a class="social-icon linkedin" target="_blank" href="https://www.linkedin.com/in/samanrsh"></a>
+											<a class="social-icon googleplus" target="_blank" href="https://plus.google.com/109638627387819515843"></a>
+											<a class="social-icon facebook" target="_blank" href="https://www.facebook.com/Samanrashidii"></a>	
 										</li>
 									</ul>
 								</div><!-- contact-info end -->
