--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 			<div class="menu">
 				<div class="menu-wrapper">
-					<ul class="menu-items" itemscope itemtype="http://www.schema.org/SiteNavigationElement">
+					<ul class="menu-items">
 						<li class="menu-item">
 							<button class="menu-item-button" onClick="JavaScript:$('#Home').animatescroll({scrollSpeed:1200,easing:'easeInExpo'})">
 								<i class="menu-item-icon home" title="Home"></i>
@@ -761,6 +761,15 @@
 
 		</div><!-- wrapper end -->		
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJjx-gcQgzoZJdu-M9K-lzI_RB4UJN8Xo&amp;v=3.exp&amp;sensor=false"></script>
+<script type="application/ld+json">
+	{
+		"@context": "http://schema.org",
+		"@id": "http://www.samanrashidi.com/#website",
+		"@type": "WebSite",
+		"url": "http://www.samanrashidi.com/",
+		"name": "Saman Rashidi"
+	}
+</script>
 <script type="text/javascript" src="js/js.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
