--- a/index.html
+++ b/index.html
@@ -767,7 +767,8 @@
 		"@id": "http://www.samanrashidi.com/#website",
 		"@type": "WebSite",
 		"url": "http://www.samanrashidi.com/",
-		"name": "Saman Rashidi"
+		"name": "Saman Rashidi",
+		"description": "Saman Rashidi is a Senior Front-end Developer Working in Edoramedia Digital Company"
 	}
 </script>
 <script type="text/javascript" src="js/js.js"></script>
