fixing minor issues

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 									<div class="stat-box">
 										<img src="images/coffee.png" alt="Cup of Coffee" />
 										<div class="stat-box-info">
-											<strong><span class="counter-up">782</span></strong><div>Cup of Coffee</div>
+											<strong><span class="counter-up">782</span></strong><div>Cups of Coffee</div>
 										</div><!-- stat-box-info end -->
 									</div><!-- stat-box end -->
 									<div class="stat-box">
