some issues fixed - instagram social has been added and samanira page started

--- a/index.html
+++ b/index.html
@@ -43,32 +43,8 @@
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 		<![endif]-->  
 
-		<style type="text/css">
-			.menu {
-				position: fixed;
-				top:0;
-				right:0;
-				width: 150px;
-			  	height: 150px;
-				-webkit-transform: translateZ(0);
-				transform: translateZ(0);
-				-webkit-transition:all .5s ease-in-out;
-				-moz-transition:all .5s ease-in-out;
-				transition:all .5s ease-in-out;
-				z-index: 999999999;
-			}
-
-			.pagination-navigation {
-				position: relative;
-				text-align: center;
-				font-size: 0;
-				margin-top:25px;
-				-webkit-transform: translateZ(0);
-				transform: translateZ(0);
-			}
-		</style>
 	</head>
-	<body itemscope itemtype="http://www.schema.org/Person" itemprop="developer">
+	<body itemscope itemtype="http://www.schema.org/Person">
 		<div id="wrapper">
 
 <!-- ======== Header Start ======== -->
@@ -671,6 +647,7 @@
 											<a class="social-icon telegram" target="_blank" href="https://telegram.me/samanrashidii"></a>
 											<a class="social-icon github" target="_blank" href="https://github.com/samanrashidii"></a>
 											<a class="social-icon linkedin" target="_blank" href="https://www.linkedin.com/in/samanrsh"></a>
+											<a class="social-icon instagram" target="_blank" href="https://www.instagram.com/web_samanira/"></a>	
 											<a class="social-icon googleplus" target="_blank" href="https://plus.google.com/109638627387819515843"></a>
 											<a class="social-icon facebook" target="_blank" href="https://www.facebook.com/Samanrashidii"></a>	
 										</li>
