arrangement rules added to samanira page

--- a/samanira.html
+++ b/samanira.html
@@ -47,37 +47,116 @@
                     <h1>
                         <img src="images/samanira.png" alt="Samanira Logo" />
                         <div itemprop="name" class="schema-item">SamanirA Framework</div>
-                        <span>by <strong itemprop="author">Saman Rashidi</strong></span>
+                        <span>by <strong itemprop="author">Saman Rashidi</strong> &amp; <strong itemprop="author" class="site-color-2">Samira Salimian</strong></span>
                         <a class="bttn site bounce large" href="http://github.com/samanrashidii/samanira" target="_blank">Download Now</a>
                     </h1>
-                    <img itemprop="image" class="saman" src="images/saman_rashidi.png" alt="" />
-                    
                 </div><!-- portfolio-banner end -->
                 <div class="portfolio-content samanira has-shape shape-4">
-                    <div class="frame">
-                        <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
-                        <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy HTML / CSS / JS framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions and plugins.</p>
-                        <h4 class="reveal">Why <strong>SamanirA</strong> ?</h4>
-                        <p>We have done more than 50 front-end projects such as Website, Landing Page, CMS, CRM and &hellip; in 4 years then we noticed that we need a light and comprehensive css framework to work with and it will have so many benefits for our projects:</p>
-                        <ul>
-                            <li>It is open source and easy to understand for changing values and classes based on your project's template</li>
-                            <li>It has the same arrangement for all css properties</li>
-                            <li>Most of the css classes and javascript functions that you need in projects are defined</li>
-                            <li>Back-end developers will love you for your code discipline</li>
-                            <li>Your folders, codes and classes will be same for all projects</li>
-                        </ul>
-                        <h4 class="reveal">Where to <strong>begin</strong> ?</h4>
-                        <ol>
-                            <li li-number="1 -">
-                                <a href="http://github.com/samanrashidii/samanira" target="_blank">Download</a> from Github
-                                <img src="images/samanira/step-1.jpg" alt="Samanira Setup - Step 1" />
-                            </li>
-                            <li li-number="2 -">
-                                Unzip it in your project's folder
-                                <img src="images/samanira/step-2.jpg" alt="Samanira Setup - Step 2" />
-                            </li>
-                            <li></li>
-                        </ol>
+                    <div class="frame clearFixAfter">
+                        <div class="main-port-content">
+                            <h4 class="reveal">What is <strong>SamanirA</strong> ?</h4>
+                            <p><a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> is an easy HTML / CSS / JS framework for "<strong>Front-end Developers</strong>" who wants to quickly build a project from 0% to 100% without wasting time on defining css classes or some javascript functions and plugins.<br />
+                            Created by <a href="http://wwww.samanrashidi.com" target="_blank">Saman Rashidi</a> &amp; <a href="http://www.samirasalimian.com" target="_blank">Samira Salimian</a></p>
+                            <h4 class="reveal">Why <strong>SamanirA</strong> ?</h4>
+                            <p>We have done more than 50 front-end projects such as Website, Landing Page, CMS, CRM and &hellip; in 4 years then we noticed that we need a light and comprehensive css framework to work with and it will have so many benefits for our projects:</p>
+                            <ul>
+                                <li>It is open source and easy to understand for changing values and classes based on your project's template</li>
+                                <li>It has the same arrangement for all css properties</li>
+                                <li>Most of the css classes and javascript functions that you need in projects are defined</li>
+                                <li>Back-end developers will love you for your code discipline</li>
+                                <li>Your folders, codes and classes will be same for all projects</li>
+                            </ul>
+                            <h4 class="reveal">Where to <strong>begin</strong> ?</h4>
+                            <ol>
+                                <li li-number="1 -">
+                                    <a href="http://github.com/samanrashidii/samanira" target="_blank">Download</a> from Github
+                                    <img src="images/samanira/step-1.jpg" alt="Samanira Setup - Step 1" />
+                                </li>
+                                <li li-number="2 -">
+                                    Unzip in your project's folder
+                                    <img src="images/samanira/step-2.jpg" alt="Samanira Setup - Step 2" />
+                                </li>
+                                <li li-number="3 -">
+                                    Start coding your project
+                                    <img src="images/samanira/step-3.jpg" alt="Samanira Setup - Step 3" />
+                                </li>
+                            </ol>
+                            <h4 class="reveal">What is the arrangement rules for <strong>css properties</strong> ?</h4>
+                            <p>In <a href="http://github.com/samanrashidii/samanira" target="_blank"><strong>SamanirA</strong></a> we put each css property with the same arrangement after each other, that makes your code organized and clean. You can see the arrangement rules here :</p>
+                            <div class="code-box">
+                                <span class="code-1">Selector</span>&nbsp;&nbsp;{
+                                <br />
+                                <div class="inner-code code-2">content</div>
+                                <div class="inner-code code-2">direction</div>
+                                <div class="inner-code code-2">box-sizing</div>
+                                <div class="inner-code code-2">position</div>
+                                <div class="inner-code code-2">top</div>
+                                <div class="inner-code code-2">right</div>
+                                <div class="inner-code code-2">bottom</div>
+                                <div class="inner-code code-2">left</div>
+                                <div class="inner-code code-2">display</div>
+                                <div class="inner-code code-2">vertical-align</div>
+                                <div class="inner-code code-2">float</div>
+                                <div class="inner-code code-2">min-width</div>
+                                <div class="inner-code code-2">width</div>
+                                <div class="inner-code code-2">max-width</div>
+                                <div class="inner-code code-2">min-height</div>
+                                <div class="inner-code code-2">height</div>
+                                <div class="inner-code code-2">max-height</div>
+                                <div class="inner-code code-2">line-height</div>
+                                <div class="inner-code code-2">overflow</div>
+                                <div class="inner-code code-2">overflow-x</div>
+                                <div class="inner-code code-2">overflow-y</div>
+                                <div class="inner-code code-2">font-family</div>
+                                <div class="inner-code code-2">font-size</div>
+                                <div class="inner-code code-2">font-weight</div>
+                                <div class="inner-code code-2">font-style</div>
+                                <div class="inner-code code-2">font-variant</div>
+                                <div class="inner-code code-2">color</div>
+                                <div class="inner-code code-2">text-align</div>
+                                <div class="inner-code code-2">text-decoration</div>
+                                <div class="inner-code code-2">text-transform</div>
+                                <div class="inner-code code-2">text-shadow</div>
+                                <div class="inner-code code-2">letter-spacing</div>
+                                <div class="inner-code code-2">line-break</div>
+                                <div class="inner-code code-2">word-break</div>
+                                <div class="inner-code code-2">word-wrap</div>
+                                <div class="inner-code code-2">padding</div>
+                                <div class="inner-code code-2">padding-top</div>
+                                <div class="inner-code code-2">padding-right</div>
+                                <div class="inner-code code-2">padding-bottom</div>
+                                <div class="inner-code code-2">padding-left</div>
+                                <div class="inner-code code-2">margin</div>
+                                <div class="inner-code code-2">margin-top</div>
+                                <div class="inner-code code-2">margin-right</div>
+                                <div class="inner-code code-2">margin-bottom</div>
+                                <div class="inner-code code-2">margin-left</div>
+                                <div class="inner-code code-2">resize</div>
+                                <div class="inner-code code-2">visibility</div>
+                                <div class="inner-code code-2">opacity</div>
+                                <div class="inner-code code-2">clear</div>
+                                <div class="inner-code code-2">cursor</div>
+                                <div class="inner-code code-2">outline</div>
+                                <div class="inner-code">other properties *</div>
+                                <div class="inner-code code-2">background</div>
+                                <div class="inner-code code-2">border</div>
+                                <div class="inner-code code-2">border-radius</div>
+                                <div class="inner-code code-2">z-index</div>
+                                <div class="inner-code code-2">box-shadow</div>
+                                <div class="inner-code code-2">transition</div>
+                                <div class="inner-code code-2">transform</div>
+                                <div class="inner-code code-2">animation</div>
+                                &nbsp;&nbsp;}
+                            </div><!-- code-box end -->
+                            <p><span class="site-color-2">*</span> If you want to add more property in your css code put them in the "other properties" area</p>
+                        </div><!-- main-port-content end -->
+                        <div class="side-port-content">
+                            <div class="button-box">
+                                <a class="bttn" href="#">About SamanirA</a>
+                                <a class="bttn" href="#">Setup SamanirA</a>
+                                <a class="bttn" href="#">Arrangement Rules</a>
+                            </div><!-- button-box end -->
+                        </div><!-- side-port-content end -->
                     </div><!-- frame end -->
                 </div><!-- portfolio-content end -->
             </div><!-- specific-portfolio end -->          
